--- a/src/main/resources/templates/cartPages/cartSave.html
+++ b/src/main/resources/templates/cartPages/cartSave.html
@@ -17,7 +17,6 @@
         <th>구매수량</th>
         <th>가격</th>
         <th>총가격</th>
-        <th>삭제</th>
       </tr>
       <tr>
         <input type="hidden" name="id" th:value="${item.id}">
@@ -27,11 +26,11 @@
         <td><input type="text" name="itemName" th:value="${item.itemName}" class="form-control" readonly></td>
         <td><input type="text" name="itemPrice" th:value="${item.itemPrice}"  class="form-control" readonly></td>
         <td>
-          <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}" name="oderCount" onchange="total()">
+          <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}" name="orderCount" onchange="total()">
         </td>
         <td th:text="${item.itemPrice}"></td>
         <td id="totalPrice">
-          <th:text th:utext="${item.itemPrice * item.cartCount}"></th:text>
+          <th:text th:text="${item.itemPrice * item.cartCount}"></th:text>
         </td>
       </tr>
     </table>
@@ -39,21 +38,16 @@
   <a href="/cart/save">장바구니</a>
   <a href="/order/save">바로구매</a>
 </div>
-
-
-
-
-
 </body>
 
 <script th:inline="javascript">
 
   const total = () => {
-    const oderCount2 = document.getElementById('itemCountInput').value;
+    const orderCount2 = document.getElementById('itemCountInput').value;
     const itemPrice2 = [[${item.itemPrice}]];
-    let oderCount = oderCount2;
+    let orderCount = orderCount2;
     let itemPrice = itemPrice2;
-    let totalPrice = oderCount * itemPrice;
+    let totalPrice = orderCount * itemPrice;
     console.log(totalPrice);
     document.getElementById("totalPrice").innerHTML = totalPrice+"₩"
   }
