--- a/src/main/resources/templates/cartPages/cartList2.html
+++ b/src/main/resources/templates/cartPages/cartList2.html
@@ -27,7 +27,7 @@
             <div class="item_detail">
                 <img th:src="@{|/upload/${cart.itemImage}}" alt="" width="50" height="50">
                 <p class="name"><strong th:text="${cart.itemName}"></strong></p>
-                <p class="txt">텍스트</p>
+<!--                <p class="txt">텍스트</p>-->
             </div>
             <div class="opt_info">
                 <strong class="price_unit" th:text="${cart.itemPrice}"></strong>원
@@ -37,8 +37,9 @@
                 <div class="total_p">
                     <strong class="price_amount" th:id="${cart.id+'price_amount'}" name="price_amount"
                             th:text="${cart.itemPrice}*${cart.cartCount}"></strong>원
-                    <span class="del_li_btn"><img
-                            src="https://tictoc-web.s3.ap-northeast-2.amazonaws.com/web/img/icon/btn_del_circle.svg"></span>
+                    <span class="del_li_btn">
+                        <img
+                            th:src="@{https://tictoc-web.s3.ap-northeast-2.amazonaws.com/web/img/icon/btn_del_circle.svg}" th:onclick="deleteFn([[${cart}]])"></span>
                 </div>
             </div>
         </li>
@@ -56,7 +57,7 @@
 
     <div class="btn_box">
         <button type="button" onclick="goBack()" class="btn wh-btn">계속 쇼핑하기</button>
-        <button type="button" class="btn black-btn">구매하기</button>
+        <button type="button" onclick="orderFn()" class="btn black-btn">구매하기</button>
     </div>
 
 </div>
@@ -64,6 +65,42 @@
 
 
 <script th:inline="javascript">
+
+    const deleteFn = (find) => {
+        console.log("deleteFn 호출");
+        console.log(find);
+        const id = find.id;
+        const userId = [[${session.member.userId}]]
+        console.log(id);
+        console.log(userId);
+
+        $.ajax({
+            type:"get",
+            url:"/cart/delete",
+            data:{
+                cartId: id,
+                userId: userId,
+            },
+            dataType: "json",
+            success:function (cartResult){
+                console.log(cartResult);
+                console.log(cartResult.id);
+                console.log("성공");
+            },
+            error: function (){
+                console.log("실패");
+            }
+        });
+    }
+
+    const orderFn = () => {
+        console.log("orderItem 호출");
+        const loc = document.getElementById("loc");
+        loc.action = "/order/save";
+        const form = document.querySelector('form');
+        form.submit();
+    }
+
     window.onload = function () {
         let itemPriceTotal = 0;
         const cartList = [[${cartList}]];
@@ -76,12 +113,12 @@
     const total = (cart) => {
         console.log(cart)
         let orderCount = document.getElementById(cart.id + "a").value;
-        const cartId = cart.id
+        const cartId = cart.id;
         const itemPrice2 = cart.itemPrice;
         let itemPrice = itemPrice2;
         let totalPrice = orderCount * itemPrice;
         let a = document.getElementsByName("price_amount")[0].innerText;
-        console.log(a)
+        console.log(a);
 
         document.getElementById(cart.id + "price_amount").innerHTML = totalPrice;
         let itemPriceTotal = 0;
@@ -92,7 +129,6 @@
         console.log(itemPriceTotal)
         document.querySelector(".item_price_total").innerHTML = itemPriceTotal;
     }
-
 
     //개별 아이템 삭제
     $('.del_li_btn').on('click', function () {
@@ -105,8 +141,9 @@
         }
         $(this).offsetParent().parent().remove();
         //console.log($(this).offsetParent().parents().find('input[type="checkbox"]').is(':checked'));
-        pay_total_func();
+        // pay_total_func();
     });
+
     //삭제 버튼을 누르면 지정된 상품 삭제
     $('.del_btn').on('click', function () {
         var recent_delete_cnt = $('.del_btn .num').text();
@@ -119,7 +156,7 @@
                 $(this).offsetParent().remove();
             }
         });
-        pay_total_func();
+        // pay_total_func();
     });
 
 </script>
