헤더 적용 수정중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,82 +20,82 @@
 </head>
 <body>
 <a href="#" id="top"><img th:src="@{img/top_btn.png}" alt="top_btn"></a> <!--top버튼-->
-
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div id="wrap">
-    <!--s:header-->
-    <div id="header_bg"> <!--#1366bf-->
-        <header><!--1400px-->
-            <div id="my_menu"><a href="#"><img th:src="@{/img/my_icon.png}" alt="my_menu"></a></div>
-            <ul><!--언어영역-->
-                <div>
-                    <div th:if="${session.member} != null">
-                        <li><a href="/member/logout">로그아웃</a></li>
-                        <ui class="dropdown">
-                            <li data-bs-toggle="dropdown" aria-expanded="true">
-                                <a role="button">마이페이지</a>
-                            </li>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" th:href="@{/order/list(userId=${session.member.userId})}">주문확인/배송조회</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" role="button" style="text-align: center">내정보</a>
-                                </li>
+<!--    &lt;!&ndash;s:header&ndash;&gt;-->
+<!--    <div id="header_bg"> &lt;!&ndash;#1366bf&ndash;&gt;-->
+<!--        <header>&lt;!&ndash;1400px&ndash;&gt;-->
+<!--            <div id="my_menu"><a href="#"><img th:src="@{/img/my_icon.png}" alt="my_menu"></a></div>-->
+<!--            <ul>&lt;!&ndash;언어영역&ndash;&gt;-->
+<!--                <div>-->
+<!--                    <div th:if="${session.member} != null">-->
+<!--                        <li><a href="/member/logout">로그아웃</a></li>-->
+<!--                        <ui class="dropdown">-->
+<!--                            <li data-bs-toggle="dropdown" aria-expanded="true">-->
+<!--                                <a role="button">마이페이지</a>-->
+<!--                            </li>-->
+<!--                            <ul class="dropdown-menu">-->
+<!--                                <li>-->
+<!--                                    <a class="dropdown-item" th:href="@{/order/list(userId=${session.member.userId})}">주문확인/배송조회</a>-->
+<!--                                </li>-->
+<!--                                <li>-->
+<!--                                    <a class="dropdown-item" role="button" style="text-align: center">내정보</a>-->
+<!--                                </li>-->
 
-                            </ul>
-                        </ui>
-                        <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>
-                        <li><a href="/question/list">고객센터</a></li>
-                        <li><a href="/member/admin">관리자페이지</a></li>
+<!--                            </ul>-->
+<!--                        </ui>-->
+<!--                        <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>-->
+<!--                        <li><a href="/question/list">고객센터</a></li>-->
+<!--                        <li><a href="/member/admin">관리자페이지</a></li>-->
 
 
-                    </div>
-                    <div th:unless="${session.member}">
-                        <li><a href="/member/login">로그인</a></li>
-                        <li><a href="/member/save">회원가입</a></li>
-                        <li><a href="/question/list">고객센터</a></li>
-                    </div>
-                </div>
-            </ul>
+<!--                    </div>-->
+<!--                    <div th:unless="${session.member}">-->
+<!--                        <li><a href="/member/login">로그인</a></li>-->
+<!--                        <li><a href="/member/save">회원가입</a></li>-->
+<!--                        <li><a href="/question/list">고객센터</a></li>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </ul>-->
 
-            <div id="h_btm" style="width: 950px"> <!--로고부분헤더-->
-                <h1><a href="#"><img th:src="@{/img/gardening.jpg}" width="150" height="130" alt="gardening"></a></h1>
-                <nav>
-                    <div id="all_menu">
-                        <a href="#"><img th:src="@{/img/allmenu_icon.png}" alt="menu"></a>
-                    </div>
+<!--            <div id="h_btm" style="width: 950px"> &lt;!&ndash;로고부분헤더&ndash;&gt;-->
+<!--                <h1><a href="#"><img th:src="@{/img/gardening.jpg}" width="150" height="130" alt="gardening"></a></h1>-->
+<!--                <nav>-->
+<!--                    <div id="all_menu">-->
+<!--                        <a href="#"><img th:src="@{/img/allmenu_icon.png}" alt="menu"></a>-->
+<!--                    </div>-->
 
-                    <ul style="margin-left: 100px;">
+<!--                    <ul style="margin-left: 100px;">-->
 
-                        <li><a href="#">소형 식물</a></li>
-                        <li><a href="#">중형 식물</a></li>
-                        <li><a href="#">대형 식물</a></li>
-                        <li><a href="/item/main">전체상품</a></li>
+<!--                        <li><a href="#">소형 식물</a></li>-->
+<!--                        <li><a href="#">중형 식물</a></li>-->
+<!--                        <li><a href="#">대형 식물</a></li>-->
+<!--                        <li><a href="/item/main">전체상품</a></li>-->
 
-                        <!--                        <li id="search_icon2">-->
-                        <!--                            <a href="/item/search">-->
-                        <!--                                <img th:src="@{/img/icon_search.png}" alt=""></a>-->
-                        <!--                        </li>-->
+<!--                        &lt;!&ndash;                        <li id="search_icon2">&ndash;&gt;-->
+<!--                        &lt;!&ndash;                            <a href="/item/search">&ndash;&gt;-->
+<!--                        &lt;!&ndash;                                <img th:src="@{/img/icon_search.png}" alt=""></a>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        </li>&ndash;&gt;-->
 
-                        <!--                        <li>-->
-                        <!--                            <form href="/item/search" method="post" id="search_form">-->
+<!--                        &lt;!&ndash;                        <li>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                            <form href="/item/search" method="post" id="search_form">&ndash;&gt;-->
 
-                        <!--                                <fieldset>-->
-                        <!--                                    <legend>검색창</legend>-->
-                        <!--                                    <p><input type="search" name="q" value="검색어를 입력하세요" ></p>-->
-                        <!--                                    <p><input type="submit" value="검색" name="search_click"></p>-->
+<!--                        &lt;!&ndash;                                <fieldset>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                                    <legend>검색창</legend>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                                    <p><input type="search" name="q" value="검색어를 입력하세요" ></p>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                                    <p><input type="submit" value="검색" name="search_click"></p>&ndash;&gt;-->
 
-                        <!--                                </fieldset>-->
-                        <!--                            </form>-->
-                        <!--                        </li>-->
+<!--                        &lt;!&ndash;                                </fieldset>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                            </form>&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        </li>&ndash;&gt;-->
 
-                    </ul>
+<!--                    </ul>-->
 
-                </nav>
+<!--                </nav>-->
 
-            </div>
+<!--            </div>-->
 
-        </header>
+<!--        </header>-->
     </div>
     <!--e:header-->
 
