--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -6,16 +6,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--    카카오 로그인 api-->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <link rel="stylesheet" th:href="@{../static/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
-
-
-
-
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div>
     <article class="inner_login">
         <div class="login_tistory">
