--- a/src/main/resources/templates/cartPages/cartList2.html
+++ b/src/main/resources/templates/cartPages/cartList2.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
-<html lang="kr" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-    <head>
-        <link rel="stylesheet" th:href="@{/css/cart.css}">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width; initial-scale=1.0"/>
-        <title>GARDENING SHOP | gardening shop</title>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-                integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-                integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-                crossorigin="anonymous"></script>
-        <script src="/static/js/bootstrap.bundle.js"></script>
-        <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
-        <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
-        <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
-        <script th:src="@{/scripts/scripts.js}"></script>
-        <link th:href="@{https://fonts.googleapis.com/css?family=Nanum+Gothic}" rel="stylesheet" type="text/css"><!--폰트-->
-    </head>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/cart.css}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+</head>
 <body>
-
 <div th:unless="${cartList == 'empty'}" class="cart_table">
     <p>장바구니</p>
 
@@ -65,8 +51,7 @@
     <div class="cart_total_area">
         <p>결제 정보</p>
         <div class="cart_total_price">
-            <p>총 상품금액 <strong class="item_price_total" id="item_price_total"></strong>원 <span class="plus_ic"></span>
-            </p>
+            <p>총 상품금액 <strong class="item_price_total" id="item_price_total"></strong>원 <span class="plus_ic"></span></p>
         </div>
     </div>
 
@@ -87,14 +72,13 @@
         const id = find.id;
         const userId = [[${session.member.userId}]]
         console.log(id);
-        console.log(userId);
+        console.log(userId)
 
         $.ajax({
             type:"get",
             url:"/cart/delete",
             data:{
                 cartId: id,
-                userId: userId,
             },
             dataType: "json",
             success:function (cartResult){
@@ -119,7 +103,7 @@
     window.onload = function () {
         let itemPriceTotal = 0;
         const cartList = [[${cartList}]];
-        for (let i = 0; i < cartList.length; i++) {
+        for(let i = 0; i < cartList.length; i++){
             itemPriceTotal += cartList[i].itemPrice * cartList[i].cartCount;
         }
         document.querySelector(".item_price_total").innerHTML = itemPriceTotal;
