--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+<th:block th:replace="commonPages/header :: header"></th:block>
 <a href="/item/save" class="btn-success">상품등록</a>
 
 
