--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -7,9 +7,7 @@
     <!--    카카오 로그인 api-->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
     <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
@@ -47,12 +45,10 @@
             </div>
         </section>
     </article>
-    <article class="join">
-        <h1>join-us</h1>
-    </article>
+<!--    <article class="join">-->
+<!--        <h1>join-us</h1>-->
+<!--    </article>-->
 </div>
-
-
 </body>
 
 <script th:inline="javascript">
