--- a/src/main/resources/templates/memberPages/myPage.html
+++ b/src/main/resources/templates/memberPages/myPage.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container" id="myPage-form">
   <a href="/member/password">정보 수정</a>
   <a href="/order/list">주문 내역</a>
