--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container" id="question-list">
     <table class="table table-striped table-hover text-center">
         <tr>
