--- a/src/main/resources/templates/cartPages/cartList.html
+++ b/src/main/resources/templates/cartPages/cartList.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
-
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div th:if="${cartList == 'empty'}">
     <p>작성된 댓글이 없습니다.</p>
 </div>
