--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -2,9 +2,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="header">
   <meta charset="UTF-8">
-  <title>Title</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
+  <title>header</title>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+          crossorigin="anonymous"></script>
+  <script src="/static/js/bootstrap.bundle.js"></script>
+  <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
+  <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
+  <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
+  <script th:src="@{/scripts/scripts.js}"></script>
+  <link th:href="@{https://fonts.googleapis.com/css?family=Nanum+Gothic}" rel="stylesheet" type="text/css"><!--폰트-->
   <div id="wrap">
     <!--s:header-->
     <div id="header_bg"> <!--#1366bf-->
@@ -81,6 +91,6 @@
       </header>
     </div>
     <!--e:header-->
+  </div>
 </th:block>
-</script>
 </html>
