--- a/src/main/resources/templates/memberPages/admin.html
+++ b/src/main/resources/templates/memberPages/admin.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+<th:block th:replace="commonPages/header :: header"></th:block>
 <a href="/item/main" class="btn btn-primary">상품관리</a>
 <a href="/order/listAll" class="btn btn-primary">주문관리</a>
 <a href="/member/list" class="btn btn-primary">회원 관리</a>
