--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </head>
 <body>
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container">
     <table class="table table-striped table-hover text-center mt-5">
         <tr>
