--- a/src/main/resources/templates/memberPages/memberPasswordCheck.html
+++ b/src/main/resources/templates/memberPages/memberPasswordCheck.html
@@ -6,6 +6,7 @@
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 <body>
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div class="password-container">
     <form action="/member/password" method="get" name="passwordCheck"></form>
     <input type="hidden" name="id" th:value="${session.member.id}">
