--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-
+<th:block th:replace="commonPages/header :: header"></th:block>
 <div class="main">
 <header id="header">
   <h1 class="tit">회원가입</h1>
