--- a/src/main/resources/templates/memberPages/memberWrite.html
+++ b/src/main/resources/templates/memberPages/memberWrite.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+<th:block th:replace="commonPages/header :: header"></th:block>
 <a href="/question/list">Q&A</a>
 <a href="/comment/list">후기</a>
 </body>
