--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -1,96 +1,83 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="header">
-  <meta charset="UTF-8">
-  <title>header</title>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-          crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-          crossorigin="anonymous"></script>
-  <script src="/static/js/bootstrap.bundle.js"></script>
-  <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
-  <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
-  <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
-  <script th:src="@{/scripts/scripts.js}"></script>
-  <link th:href="@{https://fonts.googleapis.com/css?family=Nanum+Gothic}" rel="stylesheet" type="text/css"><!--폰트-->
-  <div id="wrap">
-    <!--s:header-->
-    <div id="header_bg"> <!--#1366bf-->
-      <header><!--1400px-->
-        <div id="my_menu"><a href="#"><img th:src="@{/img/my_icon.png}" alt="my_menu"></a></div>
-        <ul><!--언어영역-->
-          <div>
-            <div th:if="${session.member} != null">
-              <li><a href="/member/logout">로그아웃</a></li>
-              <li><a href="/member/myPage">마이페이지</a></li>
-              <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>
-              <li><a href="/question/list">고객센터</a></li>
-              <li><a href="/member/admin">관리자페이지</a></li>
+    <meta charset="UTF-8">
+    <title>header</title>
+    <script th:src="@{/scripts/scripts.js}"></script>
+    <script src="/static/js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
+    <link th:href="@{https://fonts.googleapis.com/css?family=Nanum+Gothic}" rel="stylesheet" type="text/css"><!--폰트-->
+    <div id="wrap">
+        <!--s:header-->
+        <div id="header_bg"> <!--#1366bf-->
+            <header><!--1400px-->
+                <div id="my_menu"><a href="#"><img th:src="@{/img/my_icon.png}" alt="my_menu"></a></div>
+                <ul><!--언어영역-->
+                    <div>
+                        <div th:if="${session.member} != null">
+                            <li><a href="/member/logout">로그아웃</a></li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                    마이페이지
+                                </a>
+
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <li><a class="dropdown-item" th:href="@{/order/list(userId=${session.member.userId})}">주문확인/배송조회</a></li>
+                                    <li><a class="dropdown-item" href="#">내정보</a></li>
+                                </ul>
+                            </li>
+                            <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>
+                            <li><a href="/question/list">고객센터</a></li>
+                            <li><a href="/member/admin">관리자페이지</a></li>
+                        </div>
 
 
-              <div class="dropdown">
-                <button class="dropdown-toggle" type="text" data-bs-toggle="dropdown" aria-expanded="true">
-                  마이페이지
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" th:href="@{/order/list(userId=${session.member.userId})}">주문확인/배송조회</a>
-                  </li>
-                  <li>
-                    <button class="dropdown-item" type="button">Another action</button>
-                  </li>
-                  <li>
-                    <button class="dropdown-item" type="button">Something else here</button>
-                  </li>
+                        <div th:unless="${session.member}">
+                            <li><a href="/member/login">로그인</a></li>
+                            <li><a href="/member/save">회원가입</a></li>
+                            <li><a href="/question/list">고객센터</a></li>
+                        </div>
+                    </div>
                 </ul>
-              </div>
 
-            </div>
-            <div th:unless="${session.member}">
-              <li><a href="/member/login">로그인</a></li>
-              <li><a href="/member/save">회원가입</a></li>
-              <li><a href="/question/list">고객센터</a></li>
-            </div>
-          </div>
-        </ul>
+                <div id="h_btm" style="width: 950px"> <!--로고부분헤더-->
+                    <h1><a href="#"><img th:src="@{/img/gardening.jpg}" width="150" height="130" alt="도그쿡"></a></h1>
+                    <nav>
+                        <div id="all_menu">
+                            <a href="#"><img th:src="@{/img/allmenu_icon.png}" alt="menu"></a>
+                        </div>
 
-        <div id="h_btm" style="width: 950px"> <!--로고부분헤더-->
-          <h1><a href="#"><img th:src="@{/img/mainlogo1.png}" alt="도그쿡"></a></h1>
-          <nav>
-            <div id="all_menu">
-              <a href="#"><img th:src="@{/img/allmenu_icon.png}" alt="menu"></a>
-            </div>
+                        <ul style="margin-left: 100px;">
 
-            <ul style="margin-left: 100px;">
+                            <li><a href="#">소형 식물</a></li>
+                            <li><a href="#">중형 식물</a></li>
+                            <li><a href="#">대형 식물</a></li>
+                            <li><a href="/item/main">전체상품</a></li>
 
-              <li><a href="#">소형 식물</a></li>
-              <li><a href="#">중형 식물</a></li>
-              <li><a href="#">대형 식물</a></li>
-              <li><a href="/item/main">전체상품</a></li>
+                            <!--                        <li id="search_icon2">-->
+                            <!--                            <a href="/item/search">-->
+                            <!--                                <img th:src="@{/img/icon_search.png}" alt=""></a>-->
+                            <!--                        </li>-->
 
-              <!--                        <li id="search_icon2">-->
-              <!--                            <a href="/item/search">-->
-              <!--                                <img th:src="@{/img/icon_search.png}" alt=""></a>-->
-              <!--                        </li>-->
+                            <!--                        <li>-->
+                            <!--                            <form href="/item/search" method="post" id="search_form">-->
 
-              <!--                        <li>-->
-              <!--                            <form href="/item/search" method="post" id="search_form">-->
+                            <!--                                <fieldset>-->
+                            <!--                                    <legend>검색창</legend>-->
+                            <!--                                    <p><input type="search" name="q" value="검색어를 입력하세요" ></p>-->
+                            <!--                                    <p><input type="submit" value="검색" name="search_click"></p>-->
 
-              <!--                                <fieldset>-->
-              <!--                                    <legend>검색창</legend>-->
-              <!--                                    <p><input type="search" name="q" value="검색어를 입력하세요" ></p>-->
-              <!--                                    <p><input type="submit" value="검색" name="search_click"></p>-->
-
-              <!--                                </fieldset>-->
-              <!--                            </form>-->
-              <!--                        </li>-->
-            </ul>
-          </nav>
+                            <!--                                </fieldset>-->
+                            <!--                            </form>-->
+                            <!--                        </li>-->
+                        </ul>
+                    </nav>
+                </div>
+            </header>
         </div>
-      </header>
+        <!--e:header-->
     </div>
-    <!--e:header-->
-  </div>
 </th:block>
 </html>
