--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
-<th:block th:replace="commonPages/header :: header"></th:block>
 <div>
     <article class="inner_login">
         <div class="login_tistory">
@@ -45,9 +44,9 @@
             </div>
         </section>
     </article>
-<!--    <article class="join">-->
-<!--        <h1>join-us</h1>-->
-<!--    </article>-->
+    <article class="join">
+        <h1>join-us</h1>
+    </article>
 </div>
 </body>
 
