--- a/src/main/resources/templates/orderPages/orderSave.html
+++ b/src/main/resources/templates/orderPages/orderSave.html
@@ -3,65 +3,188 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/order.css}">
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <style>
+        .box {
+            width: 50px;
+            height: 50px;
+            border-radius: 70%;
+            overflow: hidden;
+        }
+
+        .profile {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container">
     <form action="/order/save" method="post">
-        <table class="table table-hover table-striped mt-5">
+        < <input type="hidden" name="userId" th:value="${session.member.userId}">
+        <input type="hidden" name="memberId" th:value="${session.member.id}">
+        <input type="hidden" name="itemId" th:value="${item.id}">
+        <table class="table">
             <tr>
-                <th>파일</th>
-                <img th:src="@{|/upload/${item.itemImage}}" alt="" width="200" height="200"></td>
+                <th>상품</th>
+                <th>상품이름</th>
+                <th>상품가격</th>
+                <th>상품수량</th>
+                <th>총가격</th>
+
             </tr>
             <tr>
-                <th>상품명</th>
-                <input type="hidden" name="id" th:value="${item.id}">
+                <td class="box"><img class="profile" th:src="@{|/upload/${item.itemImage}}" alt=""></td>
                 <td><input type="text" name="orderName" th:value="${item.itemName}" class="form-control" readonly></td>
-            </tr>
-            <tr>
-                <th>가격</th>
                 <td><input type="text" name="itemPrice" th:value="${item.itemPrice}" class="form-control" readonly></td>
-            </tr>
-            <tr>
-                <th>구매수량</th>
                 <td>
-                    <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}" name="orderCount"
+                    <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}"
+                           name="orderCount"
                            onchange="total()">
                 </td>
-            <tr>
-                <th>가격</th>
-                <td th:text="${item.itemPrice}"></td>
-            </tr>
-            <tr>
-                <th>총가격</th>
-                <td id="totalPrice">
-                    <th:text th:utext="${item.itemPrice * item.cartCount}"></th:text>
-                    <input type="text" th:value="${item.itemPrice * item.cartCount}" name="orderPrice" readonly>
+                <td>
+                    <input type="text" th:value="${item.itemPrice * item.cartCount}" name="orderPrice" id="totalPrice"
+                           readonly>
                 </td>
             </tr>
         </table>
-        <!--구매자 정보-->
-        <div class="container">
-            <h2>구매자 정보</h2>
-                <input type="hidden" name="userId" th:value="${session.member.userId}">
-            <input type="hidden" name="memberId" th:value="${session.member.id}">
-            <input type="hidden" name="itemId" th:value="${item.id}">
-                <input type="text" th:value="${session.member.memberName}" readonly style="display: block" name="memberName">
-                <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block" name="memberEmail">
-                <input type="text" th:value="${session.member.memberMobile}" readonly style="display: block" name="memberMobile">
-                <li>주소지 입력</li>
-                <input type="text" name="memberAddress" placeholder="주소입력">
-                <input type="submit" value="결제하기">
-        </div>
 
 
-    <div class=></div>
-    <a href="/cart/save">장바구니</a>
-    <a href="/order/save">바로구매</a>
+        <article class="as">
+
+            <article class="info">
+
+                <header>
+                    <h2>주문 신청</h2>
+
+                    <div>
+                        <p>①&nbsp고객정보 입력</p>
+                        <label><input type="checkbox" onclick="myInform()"> 내 정보 불러오기</label>
+                    </div>
+                </header>
+
+
+                <section>
+                    <div>
+                        <input type="text" th:value="${session.member.memberName}" readonly style="display: block"
+                               name="memberName">
+                    </div>
+
+                    <div>
+                        <input type="text" th:value="${session.member.memberMobile}" readonly style="display: block"
+                               name="memberMobile">
+                    </div>
+                </section>
+
+
+                <section>
+                    <div>
+                        <input type="text" id="sample6_postcode" placeholder="우편번호" name="postcode">
+                        <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기">
+                    </div>
+                    <input type="text" id="sample6_address" placeholder="주소" name="memberAddress">
+                    <input type="text" id="sample6_detailAddress" name="detailAddress" placeholder="상세주소">
+                    <input type="hidden" id="sample6_extraAddress" placeholder="참고항목" name="extraAddress">
+                </section>
+
+
+                <section>
+                    <div>
+                        <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block"
+                               name="memberEmail">
+                        <input type="submit" class="btn btn-success" value="결제하기">
+                    </div>
+                </section>
+            </article>
+        </article>
+    </form>
+    </article>
 </div>
-
+<a href="/cart/save">장바구니</a>
+<a href="/order/save">바로구매</a>
 
 
 </body>
+<script th:inline="javascript">
+    const myInform = () => {
+        const memberAddress = document.querySelector('input[name=memberAddress]');
+        const detailAddress = document.querySelector('input[name=detailAddress]');
+        const extraAddress = document.querySelector('input[name=extraAddress]');
+        const postcode = document.querySelector('input[name=postcode]');
+        if(document.querySelector('input[type=checkbox]').checked) {
+            memberAddress.value = [[${session.member.memberAddress}]];
+            detailAddress.value = [[${session.member.detailAddress}]];
+            extraAddress.value = [[${session.member.extraAddress}]];
+            postcode.value = [[${session.member.postcode}]];
+        } else {
+            document.querySelector('input[name=memberAddress]').value = '';
+            document.querySelector('input[name=detailAddress]').value = '';
+            document.querySelector('input[name=extraAddress]').value = '';
+            document.querySelector('input[name=postcode]').value = '';
+        }
+    }
+
+
+    const total = () => {
+        console.log("함수호출")
+        const itemCount = document.getElementById("itemCountInput").value;
+        let itemPrice = [[${item.itemPrice}]];
+        let totalPrice = itemCount * itemPrice;
+        document.getElementById("totalPrice").value = totalPrice;
+    }
+
+    function sample6_execDaumPostcode() {
+        new daum.Postcode({
+            oncomplete: function (data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var addr = ''; // 주소 변수
+                var extraAddr = ''; // 참고항목 변수
+
+                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                    addr = data.roadAddress;
+                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                    addr = data.jibunAddress;
+                }
+
+                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                if (data.userSelectedType === 'R') {
+                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    if (data.bname !== '' && /[동|로|가]$/g.test(data.bname)) {
+                        extraAddr += data.bname;
+                    }
+                    // 건물명이 있고, 공동주택일 경우 추가한다.
+                    if (data.buildingName !== '' && data.apartment === 'Y') {
+                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    if (extraAddr !== '') {
+                        extraAddr = ' (' + extraAddr + ')';
+                    }
+                    // 조합된 참고항목을 해당 필드에 넣는다.
+                    document.getElementById("sample6_extraAddress").value = extraAddr;
+
+                } else {
+                    document.getElementById("sample6_extraAddress").value = '';
+                }
+
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                document.getElementById('sample6_postcode').value = data.zonecode;
+                document.getElementById("sample6_address").value = addr;
+                // 커서를 상세주소 필드로 이동한다.
+                document.getElementById("sample6_detailAddress").focus();
+            }
+        }).open();
+    }
+
+</script>
+
 </html>
